vendor/fixed-macro/tests/compile-fail/overflow-02.rs
fn main() {
    fixed_macro::fixed!(-8.99: I4F4);
}
